# aoc2024

./: pyproject.toml
07/: first.py  second.py
09/: first.py
10/: first.py  second.py
12/: first.py
13/: first.py  second.py
14/: first.py  second.py
16/: first.py
19/: first.py  second.py
20/: first.py
22/: first.py  second.py
23/: first.py  second.py
24/: first.py  second.py
