[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
networkx = "^3.4.2"
z3-solver = "^4.13.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
